src/AnalizadorLexico.java
/* Generated By:JavaCC: Do not edit this line. AnalizadorLexico.java */
public class AnalizadorLexico implements AnalizadorLexicoConstants {
static int numero = 0;
private static void grabarLexema (int n, String token, String lexema, int
nL, int nC) {
System.out.println(n + "- Token: "+ token + " Lexema:" + lexema + "Linea: "+ nL + "Columna:" +nC);
}
private static void grabarDatosPieza(int n, String token, Token pieza) {
grabarLexema(n, token, pieza.image, pieza.beginLine, pieza.beginColumn );
}

public static void main(String args []) throws ParseException
{
try
{
System.out.println("Ingrese el c\u00f3digo a analizar:");
AnalizadorLexico parser = new AnalizadorLexico(System.in);
parser.TokenList();
System.out.println("Analisis terminado:");
System.out.println("no se han hallado errores l\u00e9xicos");


}catch(TokenMgrError te)
{
System.out.println("Se han encontrado errores lexicos.");
System.out.println(te.getMessage());

}
catch(ParseException e)
{
System.out.println("Analizador: Se han encontrado errores en el analisis.");
System.out.println(e.getMessage());
}
}

  static final public void Programa() throws ParseException {
    Sentencias();
    jj_consume_token(TERMINAL);
  }

  static final public void Sentencias() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TIPODATOENTERO:
    case TIPODATOCADENA:
      declaracion();
      break;
    case IDENTIFICADOR:
      Asignacion();
      break;
    case PALABRARESERVADAESCRIBIR:
      SentEscribir();
      break;
    case PALABRARESERVADALEER:
      SentLeer();
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void asigAuux() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LPAREN:
    case IDENTIFICADOR:
    case NUMERO:
      expresion();
      break;
    case PALABRARESERVADALEER:
      SentLeer();
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void asigAux() throws ParseException {
    jj_consume_token(IDENTIFICADOR);
    jj_consume_token(ASIGNACION);
    asigAuux();
  }

  static final public void Asignacion() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TIPODATOENTERO:
    case IDENTIFICADOR:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TIPODATOENTERO:
        jj_consume_token(TIPODATOENTERO);
        break;
      default:
        jj_la1[2] = jj_gen;
        ;
      }
      asigAux();
      break;
    case TIPODATOCADENA:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TIPODATOCADENA:
        jj_consume_token(TIPODATOCADENA);
        break;
      default:
        jj_la1[3] = jj_gen;
        ;
      }
      asigAux();
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void declaraux() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TIPODATOENTERO:
      jj_consume_token(TIPODATOENTERO);
      break;
    case TIPODATOCADENA:
      jj_consume_token(TIPODATOCADENA);
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void declaracion() throws ParseException {
    declaraux();
    jj_consume_token(IDENTIFICADOR);
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SEPARADOR:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_1;
      }
      variable();
    }
  }

  static final public void variable() throws ParseException {
    jj_consume_token(SEPARADOR);
    jj_consume_token(IDENTIFICADOR);
  }

  static final public void SentLeer() throws ParseException {
    jj_consume_token(PALABRARESERVADALEER);
    jj_consume_token(ABRIRCORCHETE);
    jj_consume_token(CERRARCORCHETE);
  }

  static final public void SentEscribir() throws ParseException {
    jj_consume_token(PALABRARESERVADAESCRIBIR);
    jj_consume_token(ASIGNACION);
    jj_consume_token(ABRIRCORCHETE);
    jj_consume_token(CADENAS);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CADENAS:
      case IDENTIFICADOR:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_2;
      }
      subcadena();
    }
    jj_consume_token(CERRARCORCHETE);
  }

  static final public void subcadena() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CADENAS:
      jj_consume_token(CADENAS);
      break;
    case IDENTIFICADOR:
      jj_consume_token(IDENTIFICADOR);
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void concatenar() throws ParseException {
    jj_consume_token(CONCATENACION);
    subcadena();
  }

  static final public void listSentencia() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PALABRARESERVADALEER:
    case PALABRARESERVADAESCRIBIR:
    case TIPODATOENTERO:
    case TIPODATOCADENA:
    case IDENTIFICADOR:
      Sentencias();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PALABRARESERVADALEER:
      case PALABRARESERVADASI:
      case PALABRARESERVADAESCRIBIR:
      case TIPODATOENTERO:
      case TIPODATOCADENA:
      case IDENTIFICADOR:
        listSentencia();
        break;
      default:
        jj_la1[9] = jj_gen;
        ;
      }
      break;
    case PALABRARESERVADASI:
      SentenciaSi();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PALABRARESERVADALEER:
      case PALABRARESERVADASI:
      case PALABRARESERVADAESCRIBIR:
      case TIPODATOENTERO:
      case TIPODATOCADENA:
      case IDENTIFICADOR:
        listSentencia();
        break;
      default:
        jj_la1[10] = jj_gen;
        ;
      }
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void SentenciaSi() throws ParseException {
    jj_consume_token(PALABRARESERVADASI);
    condicion();
    jj_consume_token(PALABRARESERVADAENTONCES);
    listSentencia();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PALABRARESERVADASINO:
      jj_consume_token(PALABRARESERVADASINO);
      listSentencia();
      break;
    default:
      jj_la1[12] = jj_gen;
      ;
    }
    jj_consume_token(PALABRARESERVADAFINSI);
  }

  static final public void condicionSimple() throws ParseException {
    expresion();
    comparacion();
    expresion();
  }

  static final public void comparacion() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case OPERADORCOMPARACIONMAYOR:
      jj_consume_token(OPERADORCOMPARACIONMAYOR);
      break;
    case OPERADORCOMPARACIONMENOR:
      jj_consume_token(OPERADORCOMPARACIONMENOR);
      break;
    case OPERADORCOMPARACIONMAYORIGUAL:
      jj_consume_token(OPERADORCOMPARACIONMAYORIGUAL);
      break;
    case OPERADORCOMPARACIONMENORIGUAL:
      jj_consume_token(OPERADORCOMPARACIONMENORIGUAL);
      break;
    case OPERADORCOMPARACIONDIFERENTE:
      jj_consume_token(OPERADORCOMPARACIONDIFERENTE);
      break;
    case OPERADORCOMPARACIONIGUAL:
      jj_consume_token(OPERADORCOMPARACIONIGUAL);
      break;
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void condicion() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 36:
      jj_consume_token(36);
      condicionSimple();
      break;
    case LPAREN:
    case IDENTIFICADOR:
    case NUMERO:
      condicionSimple();
      condicion();
      break;
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void condAux() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LPAREN:
    case IDENTIFICADOR:
    case NUMERO:
      condicionSimple();
      break;
    default:
      jj_la1[15] = jj_gen;
      ;
    }
    condicion();
  }

  static final public void expresion() throws ParseException {
    term();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OPERADORSUMA:
      case OPERADORMENOS:
        ;
        break;
      default:
        jj_la1[16] = jj_gen;
        break label_3;
      }
      operadorAdic();
      term();
    }
  }

  static final public void operadorAdic() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case OPERADORSUMA:
      jj_consume_token(OPERADORSUMA);
      break;
    case OPERADORMENOS:
      jj_consume_token(OPERADORMENOS);
      break;
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void operadorArit() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case OPERADORMULTIPLICACION:
      jj_consume_token(OPERADORMULTIPLICACION);
      break;
    case OPERADORDIVIDIDO:
      jj_consume_token(OPERADORDIVIDIDO);
      break;
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void term() throws ParseException {
    factor();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OPERADORMULTIPLICACION:
      case OPERADORDIVIDIDO:
        ;
        break;
      default:
        jj_la1[19] = jj_gen;
        break label_4;
      }
      operadorArit();
      factor();
    }
  }

  static final public void factor() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LPAREN:
      jj_consume_token(LPAREN);
      expresion();
      jj_consume_token(RPAREN);
      break;
    case NUMERO:
      jj_consume_token(NUMERO);
      break;
    case IDENTIFICADOR:
      jj_consume_token(IDENTIFICADOR);
      break;
    default:
      jj_la1[20] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

/**
* Reconoce el contenido completo de un archivo
*
* TokenList -> (TokenElement)*
*/
  static final public void TokenList() throws ParseException {
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TERMINAL:
      case PALABRARESERVADALEER:
      case PALABRARESERVADASI:
      case PALABRARESERVADAENTONCES:
      case PALABRARESERVADASINO:
      case PALABRARESERVADAFINSI:
      case PALABRARESERVADAESCRIBIR:
      case TIPODATOENTERO:
      case TIPODATOCADENA:
      case OPERADORCOMPARACIONMAYOR:
      case OPERADORCOMPARACIONMENOR:
      case CONCATENACION:
      case COMENTARIO:
      case ABRIRCORCHETE:
      case CERRARCORCHETE:
      case CADENAS:
      case IDENTIFICADOR:
      case ASIGNACION:
      case OPERADORSUMA:
      case OPERADORMULTIPLICACION:
      case OPERADORDIVIDIDO:
      case OPERADORMENOS:
        ;
        break;
      default:
        jj_la1[21] = jj_gen;
        break label_5;
      }
      TokenElement();
    }
  }

  static final public void TokenElement() throws ParseException {
 Token pieza;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TERMINAL:
      pieza = jj_consume_token(TERMINAL);
                     numero++; grabarDatosPieza(numero, "TERMINAL DE LINEA" , pieza);
      break;
    case COMENTARIO:
      pieza = jj_consume_token(COMENTARIO);
                         numero++; grabarDatosPieza(numero,
"COMENTARIO", pieza);
      break;
    case PALABRARESERVADAESCRIBIR:
      pieza = jj_consume_token(PALABRARESERVADAESCRIBIR);
                                       numero++; grabarDatosPieza(numero, "palabra reservada Escribir",
pieza);
      break;
    case IDENTIFICADOR:
      pieza = jj_consume_token(IDENTIFICADOR);
                            numero++; grabarDatosPieza(numero, "IDENTIFICADOR",
pieza);
      break;
    case ABRIRCORCHETE:
      pieza = jj_consume_token(ABRIRCORCHETE);
                            numero++; grabarDatosPieza(numero, "abrir corchete", pieza);
      break;
    case CADENAS:
      pieza = jj_consume_token(CADENAS);
                      numero++; grabarDatosPieza(numero, "cadena de texto", pieza);
      break;
    case CERRARCORCHETE:
      pieza = jj_consume_token(CERRARCORCHETE);
                             numero++; grabarDatosPieza(numero, "cerrar corchete", pieza);
      break;
    case ASIGNACION:
      pieza = jj_consume_token(ASIGNACION);
                         numero++; grabarDatosPieza(numero, "ASIGNACION", pieza);
      break;
    case PALABRARESERVADALEER:
      pieza = jj_consume_token(PALABRARESERVADALEER);
                                   numero++; grabarDatosPieza(numero, "palabra reservada leer", pieza);
      break;
    case OPERADORCOMPARACIONMAYOR:
      pieza = jj_consume_token(OPERADORCOMPARACIONMAYOR);
                                       numero++; grabarDatosPieza(numero, "operador de comparaci\u00f3n mayor", pieza);
      break;
    case OPERADORCOMPARACIONMENOR:
      pieza = jj_consume_token(OPERADORCOMPARACIONMENOR);
                                       numero++; grabarDatosPieza(numero, "operador de comparaci\u00f3n menor", pieza);
      break;
    case PALABRARESERVADAENTONCES:
      pieza = jj_consume_token(PALABRARESERVADAENTONCES);
                                       numero++; grabarDatosPieza(numero, "Palabra reservada entonces", pieza);
      break;
    case PALABRARESERVADASI:
      pieza = jj_consume_token(PALABRARESERVADASI);
                                 numero++; grabarDatosPieza(numero, "Palabra reservada si", pieza);
      break;
    case PALABRARESERVADAFINSI:
      pieza = jj_consume_token(PALABRARESERVADAFINSI);
                                    numero++; grabarDatosPieza(numero, "Palabra reservada finsi", pieza);
      break;
    case PALABRARESERVADASINO:
      pieza = jj_consume_token(PALABRARESERVADASINO);
                                   numero++; grabarDatosPieza(numero, "Palabra reservada sino", pieza);
      break;
    case CONCATENACION:
      pieza = jj_consume_token(CONCATENACION);
                            numero++; grabarDatosPieza(numero, "Concatenacion", pieza);
      break;
    case TIPODATOENTERO:
      pieza = jj_consume_token(TIPODATOENTERO);
                             numero++; grabarDatosPieza(numero, "Tipo de dato entero", pieza);
      break;
    case OPERADORSUMA:
      pieza = jj_consume_token(OPERADORSUMA);
                           numero++; grabarDatosPieza(numero, "Operador suma", pieza);
      break;
    case OPERADORMENOS:
      pieza = jj_consume_token(OPERADORMENOS);
                            numero++; grabarDatosPieza(numero, "Operador resta", pieza);
      break;
    case OPERADORMULTIPLICACION:
      pieza = jj_consume_token(OPERADORMULTIPLICACION);
                                     numero++; grabarDatosPieza(numero, "Operador multiplicacion", pieza);
      break;
    case OPERADORDIVIDIDO:
      pieza = jj_consume_token(OPERADORDIVIDIDO);
                               numero++; grabarDatosPieza(numero, "Operador dividido", pieza);
      break;
    case TIPODATOCADENA:
      pieza = jj_consume_token(TIPODATOCADENA);
                             numero++; grabarDatosPieza(numero, "Tipo de dato cadena", pieza);
      break;
    default:
      jj_la1[22] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static private boolean jj_initialized_once = false;
  static public AnalizadorLexicoTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  static public Token token, jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[23];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_0();
      jj_la1_1();
   }
   private static void jj_la1_0() {
      jj_la1_0 = new int[] {0x20007080,0x64000080,0x2000,0x4000,0x20006000,0x6000,0x400000,0x30000000,0x30000000,0x20007180,0x20007180,0x20007180,0x400,0x1f8000,0x64000000,0x64000000,0x0,0x0,0x0,0x0,0x64000000,0xb3a1ffc0,0xb3a1ffc0,};
   }
   private static void jj_la1_1() {
      jj_la1_1 = new int[] {0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x10,0x0,0x9,0x9,0x6,0x6,0x0,0xf,0xf,};
   }

  public AnalizadorLexico(java.io.InputStream stream) {
     this(stream, null);
  }
  public AnalizadorLexico(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  You must");
      System.out.println("       either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new AnalizadorLexicoTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 23; i++) jj_la1[i] = -1;
  }

  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 23; i++) jj_la1[i] = -1;
  }

  public AnalizadorLexico(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  You must");
      System.out.println("       either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new AnalizadorLexicoTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 23; i++) jj_la1[i] = -1;
  }

  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 23; i++) jj_la1[i] = -1;
  }

  public AnalizadorLexico(AnalizadorLexicoTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  You must");
      System.out.println("       either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 23; i++) jj_la1[i] = -1;
  }

  public void ReInit(AnalizadorLexicoTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 23; i++) jj_la1[i] = -1;
  }

  static final private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }

  static final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

  static final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  static final private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  static private java.util.Vector jj_expentries = new java.util.Vector();
  static private int[] jj_expentry;
  static private int jj_kind = -1;

  static public ParseException generateParseException() {
    jj_expentries.removeAllElements();
    boolean[] la1tokens = new boolean[37];
    for (int i = 0; i < 37; i++) {
      la1tokens[i] = false;
    }
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 23; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
          if ((jj_la1_1[i] & (1<<j)) != 0) {
            la1tokens[32+j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 37; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.addElement(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = (int[])jj_expentries.elementAt(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  static final public void enable_tracing() {
  }

  static final public void disable_tracing() {
  }

}
